--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "yt-dlp==2025.12.8",
     "openai-whisper==20250625",
     "googletrans==4.0.2",
+    "tqdm==4.67.1"
 ]
 
 [project.scripts]
